mobile pdf download layout bug fixed

--- a/src/pages/main/App.module.scss
+++ b/src/pages/main/App.module.scss
@@ -89,7 +89,6 @@
 .sheetsContainer {
   display: flex;
   flex-direction: column;
-  overflow: auto; // Allow scrolling in all directions
   max-width: 100vw;
 }
 
@@ -102,19 +101,6 @@
   height: 297mm; /* A4 height */
   background: white;
   box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.2);
-  overflow: auto; // Enable both vertical and horizontal scrolling
-}
-
-@media (max-width: 768px) {
-  .sheetsContainer {
-    overflow: auto; // Enable full scrolling
-    max-width: 100vw;
-  }
-
-  .vocabularySheet {
-    width: 210mm; /* Ensure the full width is preserved */
-    height: 297mm; /* Ensure the full height is preserved */
-  }
 }
 
 
